--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "@next-auth/prisma-adapter": "^1.0.6",
     "@prisma/client": "^4.14.1",
     "autoprefixer": "10.4.14",
+    "axios": "^1.4.0",
     "bcrypt": "^5.1.0",
+    "lodash": "^4.17.21",
     "next": "13.4.4",
     "next-auth": "^4.22.1",
     "postcss": "8.4.23",
